--- a/docs/sql/sfmc-sql-like.mdx
+++ b/docs/sql/sfmc-sql-like.mdx
@@ -260,7 +260,24 @@ Thanks to group operator, instead of covering every single case, we can just pro
 
 :::note You Should Know
 
-Group operator has also another use. It allows you to search for the `%` or `_` symbols with `LIKE`. As those two symbols are wildcards, you must TODO
+Group wildcard (`[]`) is also useful as a way to escape character in the `LIKE` statement. For example, you might want to look for all values including a percent sign (`%`).
+
+Writing `LIKE '10%'` is not good idea, as it would return to you all values starting with `10` - as the percent sign is a wildcard meaning zero, one or more characters. You can, however, obtain exactly what you want by writing:
+
+```sql {4-5} title="If the client has discount between 1 and 9%, let's bump it up to either 5% or 10%. If he or she has higher - leave it as it is. If no discount is available, make it 2%"
+SELECT
+    ContactKey,
+    CASE
+        WHEN Discount LIKE '[5-9][%]' THEN '10%'
+        WHEN Discount LIKE '[0-4][%]' THEN '5%'
+        WHEN Discount IS NOT NULL THEN Discount
+        ELSE '2%'
+    END AS NewDiscount
+```
+
+By wrapping the percent sign with the grouping sign `[]` we are telling SQL to look for exactly the percent sign. Thanks to it `'[1-4][%]'` search will look for `1%`, `2%`, `3%` or `4%` values only.
+
+Same works with `_` wildcard.
 
 :::
 
@@ -315,9 +332,13 @@ FROM EcommerceUpsellDE
 
 As you can see, all we need to do, it to put range operator `-` between first and last value that we want to catch. For alphabetical searches where we want both lowercase and uppercase letters, you will need to write it like this: `LIKE '[a-zA-Z]'`.
 
+If you want to search for a hyphen '-' within a grouping operator that uses a range, just add it in the very beginning. `LIKE '[-0-9]` will look for either `-` or any digit.
+
 :::note You Should Know
 
 You can mix and match groups, ranges and wildcards.
+
+It is great tool to create basic categorization solutions for uncontrolled data. For example, to clean up free text job title coming from web forms.
 
 ```sql title="Simplified Job Title categorization"
 SELECT
@@ -328,41 +349,29 @@ SELECT
         WHEN FreeTextJobTitle LIKE '%[Ss]pecialist%' THEN 'Specialists'
     END AS CorporateJobTitleGroup
 FROM _Subscriber
+```
 
 :::
 
 ### ^ Operator
 
-There is one more operator that is sometimes useful - the exclusion operator `^`. By adding it to the beginning of your group, you are telling the SQL to look for any character not like the ones within the group. For example, `LIKE '[^0-9]'` will look for any character that is not a digit. It is, however, much more useful in the [`WHERE` Statement](sfmc-sql-where#like-operator).
+There is one more operator that is sometimes useful - the exclusion operator `^`. By adding it to the beginning of your group, you are telling the SQL to look for any character not like the ones within the group. For example, `LIKE '[^0-9]'` will look for any character that is not a digit.
 
-Remember, you can use multiple Group operators within a single `LIKE`.
+This operator is especially useful for the use in `WHERE` statement. Best example? SQL for finding with Subscriber Key not being correct Salesforce ID:
 
-:::note You Should Know
-
-Group wildcard (`[]`) is also useful as a way to escape character in the `LIKE` statement. For example, you might want to look for all values including a percent sign (`%`).
-
-Writing `LIKE '10%'` is not good idea, as it would return to you all values starting with `10` - as the percent sign is a wildcard meaning zero, one or more characters. You can, however, obtain exactly what you want by writing:
-
-```sql {4-5} title="If the client has discount between 1 and 9%, let's bump it up to either 5% or 10%. If he or she has higher - leave it as it is. If no discount is available, make it 2%"
+```sql {4} title="Find all records in All Subscribers with Subscriber Key other than Salesforce ID"
 SELECT
-    ContactKey,
-    CASE
-        WHEN Discount LIKE '[5-9][%]' THEN '10%'
-        WHEN Discount LIKE '[0-4][%]' THEN '5%'
-        WHEN Discount IS NOT NULL THEN Discount
-        ELSE '2%'
-    END AS NewDiscount
+    SubscriberKey
+FROM _Subscribers
+WHERE SubscriberKey LIKE '%[^a-zA-Z0-9]%'
+    AND LEN(SubscriberKey) <> 18
 ```
 
-By wrapping the percent sign with the grouping sign `[]` we are telling SQL to look for exactly the percent sign. Thanks to it `'[1-4][%]'` search will look for `1%`, `2%`, `3%` or `4%` values only.
-
-If you want to search for a hyphen '-' within a grouping operator using a range, just add it in the very beginning. `LIKE '[-0-9]` will look for either `-` or any digit.
-
-:::
+This simple and short query will look into each SubscriberKey and check whether in there is any character other the letter or digit (case-insensitive) or whether the length is not equal to 18. All such records have incorret value and are eligible for cleanup or investigation. Perfect for Automation with deletion SSJS script or Verification Activity to alert administrator about issues.
 
 ## NOT LIKE
 
-You can add `NOT` statement before `LIKE` to search for not matching records.
+Finally, just as with other statements, you can add `NOT` statement before `LIKE` to search for not matching records:
 
 ```sql {4} title="Same query as in the beggining of our CASE journey, but flipped"
 SELECT
