--- a/docs/sql/sfmc-sql-like.mdx
+++ b/docs/sql/sfmc-sql-like.mdx
@@ -2,24 +2,24 @@
 id: sfmc-sql-like
 title: SFMC SQL Like
 sidebar_label: Like
-description: Work in progress
+description: Get a LIKE and build more flexible SQL queries
 ---
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content='Work in progress' />
+<LeadText content='Get a LIKE and build more flexible SQL queries' />
 
 `LIKE` operator allows you to leverage wildcards to search for matching records based on value fragment. You may use it in the [`SELECT CASE`](sfmc-sql-select#like-in-case) and [`WHERE`](sfmc-sql-where) statements.
 
-In [`SELECT`](sfmc-sql-select#like-in-case) think about normalizing and categorizing data. In [`WHERE`](sfmc-sql-where) - about filtering with just a part of the value (for example email domain in `EmailAddress` field) or with a single element within multi picklist (for instance finding one value within the comma-separated list of all purchased products).
+In [`SELECT`](sfmc-sql-select#like-in-case), think about normalizing and categorizing data. In [`WHERE`](sfmc-sql-where) - about filtering with just a part of the value (for example email domain in `EmailAddress` field) or with a single element within multi picklist (for instance finding one value within the comma-separated list of all purchased products).
 
-There are two levels of `LIKE` usage. First is focused on two basic character wildcards and is very strightforward. The second uses full potential of group operator. Let's go through both with practical examples.
+There are two levels of `LIKE` usage. First is focused on two essential character wildcards and is very straightforward — the second use full potential of group operator. Let's go through both with practical examples.
 
 ## LIKE with Wildcard
 
-There are two basic wildcards available in `LIKE`:
+Wildcards available in `LIKE`:
 
 Wildcard | Description
 -- | --
@@ -32,7 +32,7 @@ The `%` symbol allows you to match zero, one or more characters within your `LIK
 
 For example, you can search for `%@mateuszdabrowski.pl` domain in `EmailAddress` to get all contacts with an email address ending with `@mateuszdabrowski.pl`.
 
-You can change this filter to `%@mateuszdabrowski.%`. With the second wildcard at the end, it will be looking for any email address that contains `@mateuszdabrowski.` but may have more text on either side of it. It will capture all emails ending with `@mateuszdabrowski.pl` domain just as the previous filter, but also match those with `@mateuszdabrowski.com`, `@mateuszdabrowski.sfmc.eu` and other top level domains.
+You can change this filter to `%@mateuszdabrowski.%`. With the second wildcard at the end, it will be looking for any email address that contains `@mateuszdabrowski.` but may have more text on either side of it. It will capture all emails ending with `@mateuszdabrowski.pl` domain just as the previous filter, but also match those with `@mateuszdabrowski.com`, `@mateuszdabrowski.sfmc.eu` and other top-level domains.
 
 <Tabs
     defaultValue='where'
@@ -52,7 +52,7 @@ FROM _Subscribers
 WHERE EmailAddress LIKE '%@%mateuszdabrowski.pl'
 ```
 
-In the above example I used two wildcards - one before and one just after `@` symbol. This will allow to not only catch contacts in `@mateuszdabrowski.pl` domain, but also any subdomain, like `@dev.mateuszdabrowski.pl`.
+In the above example, I used two wildcards - one before and one just after `@` symbol. It allows not only to catch contacts in `@mateuszdabrowski.pl` domain, but also any subdomain, like `@dev.mateuszdabrowski.pl`.
 
 In the marketing automation world, however, `LIKE` operator is especially useful for selecting contacts based on the multi picklist columns. Consider `ActiveSubscriptions` field that can have any combination of values `Phone`, `TV`, `Internet`.
 
@@ -79,7 +79,7 @@ SELECT
 FROM _Subscribers
 ```
 
-In the above example I used two wildcards - one before and one just after `@` symbol. This will allow to not only catch contacts in `@mateuszdabrowski.pl` domain, but also any subdomain, like `@dev.mateuszdabrowski.pl`.
+In the above example, I used two wildcards - one before and one just after `@` symbol. It allows not only to catch contacts in `@mateuszdabrowski.pl` domain, but also any subdomain, like `@dev.mateuszdabrowski.pl`.
 
 </TabItem>
 </Tabs>
@@ -88,15 +88,15 @@ In the above example I used two wildcards - one before and one just after `@` sy
 
 Always be sure to check whether you apply the wildcards correctly. Popular error is to have either too narrow or too wide scope of your filter. A common issue is lack of `%` operator in the end or beginning of the searched string. For your query, it means that the value should end there.
 
-For example `WHERE EmailAddress LIKE '@gmail.com'` should provide you zero results, as it would be looking for exactly the `@gmail.com` value in the `EmailAddress` field - without any characters before the `@` symbol.
+For example `WHERE EmailAddress LIKE '@gmail.com'` should provide you zero results, as it would be looking for precisely the `@gmail.com` value in the `EmailAddress` field - without any characters before the `@` symbol.
 
 :::
 
 ### _ Wildcard
 
-Another wildcard working with `LIKE` is the underscore `_`. It is much simpler, as all it does it pretending to be any single character.
+Another wildcard working with `LIKE` is the underscore `_`. It is much simpler as all it does it pretending to be any single character.
 
-Let's consider a scenario, where you have a multipicklist field containg comma-separated product IDs. For example, a customer with three recommended products might have a value `1,14,27`. The system codes single digit values to subscriptions, and two digit codes to various product categories. Let's use it in the query.
+Let's consider a scenario, where you have a multi picklist field containing comma-separated product IDs. For example, a customer with three recommended products might have a value `1,14,27`. The system codes single digit values to subscriptions, and two-digit codes to various product categories. Let's use it in the query.
 
 <Tabs
     defaultValue='where'
@@ -120,7 +120,7 @@ WHERE RecommendedProducts LIKE '_'
     OR RecommendedProducts LIKE '%,_'
 ```
 
-In the query above we are filtering our database with `RecommendedProducts` field. To add a contact to our segment, in four steps we check if at least one condition is true:
+In the query above, we are filtering our database with `RecommendedProducts` field. To add a contact to our segment, in four steps, we check if at least one condition is true:
 
 </TabItem>
 <TabItem value='select'>
@@ -139,15 +139,15 @@ SELECT
 FROM EcommerceUpsellDE
 ```
 
-In the query above we are creating new boolean field that will tell us whether the contact has at least one subscription product in their recommended lists. Great for personalized communication emphasizing this recommendation. We do this by assigning value `True` if at least one of four steps evaluates to true:
+In the query above, we are creating new boolean field that will tell us whether the contact has at least one subscription product in their recommended lists. Great for personalized communication emphasizing this recommendation. We do this by assigning value `True` if at least one of four steps evaluates to true:
 
 </TabItem>
 </Tabs>
 
-1. If the record has exactly one recommended product that has a single digit code (subscription)
-2. If the record has multiple recommended products and the first one is single digit (subscription)
-3. If the record has multiple recommended products and one in the middle is single digit (subscription)
-4. If the record has multiple recommended products and the last one is single digit (subscription)
+1. If the record has exactly one recommended product that has a single-digit code (subscription)
+2. If the record has multiple recommended products and the first one is a single-digit (subscription)
+3. If the record has multiple recommended products and one in the middle is a single-digit (subscription)
+4. If the record has multiple recommended products and the last one is a single-digit (subscription)
 
 ## LIKE with Group
 
@@ -161,9 +161,9 @@ Advanced Operator | Description
 
 ### [] Operator
 
-The group operator `[]` allows you to provide a list of characters that you want to find a match for.
+The group operator `[]` allows you to provide a list of characters that you want to find a match.
 
-For example, consider the previous example with a field containing multiple IDs of your subscription and standard products. The field stores subscriptions in a form of single digit product IDs. First four IDs are related to Premium subscriptions. IDs from 5 to 9 are Standard subscriptions.
+Consider the previous example with a field containing multiple IDs of your subscription and standard products. The field stores subscriptions in the form of single-digit product IDs. First four IDs are related to Premium subscriptions. IDs from 5 to 9 are Standard subscriptions.
 
 <Tabs
     defaultValue='where'
@@ -177,7 +177,7 @@ For example, consider the previous example with a field containing multiple IDs 
 If we would like to output only the Premium subscriptions, we would have to create a separate filter for each ID.
 
 
-```sql {6-14} title="Thus approach would require 16 lines to cover the use case"
+```sql {6-14} title="This approach would require 16 lines to cover the use case"
 SELECT
     SubscriberKey,
     EmailAddress,
@@ -194,7 +194,7 @@ WHERE RecommendedProducts LIKE '1'
     ...
 ```
 
-With group, we can optimize it. A lot.
+With a group, we can optimize it — a lot.
 
 ```sql {6-9} title="Same outcome with just 4 lines"
 SELECT
@@ -233,7 +233,7 @@ SELECT
 FROM EcommerceUpsellDE
 ```
 
-With group, we can optimize it. A lot.
+With a group, we can optimize it  — a lot.
 
 ```sql {5-12} title="Same outcome with just 8 WHEN/THEN lines"
 SELECT
@@ -256,15 +256,15 @@ FROM EcommerceUpsellDE
 </TabItem>
 </Tabs>
 
-Thanks to group operator, instead of covering every single case, we can just provide them all within the `[]`. Short, clean and readable. And it can get even better.
+Thanks to the group operator, instead of covering every single case, we can provide all values within the `[]`. Short, clean and readable. And it can get even better.
 
 :::note You Should Know
 
-Group wildcard (`[]`) is also useful as a way to escape character in the `LIKE` statement. For example, you might want to look for all values including a percent sign (`%`).
+Group wildcard (`[]`) is also useful as a way to escape character in the `LIKE` statement. For example, you might want to look for all values, including a per cent sign (`%`).
 
-Writing `LIKE '10%'` is not good idea, as it would return to you all values starting with `10` - as the percent sign is a wildcard meaning zero, one or more characters. You can, however, obtain exactly what you want by writing:
+Writing `LIKE '10%'` is not a good idea, as it would return you all values starting with `10` - as the per cent sign is a wildcard meaning zero, one or more characters. You can, however, obtain what you want by writing:
 
-```sql {4-5} title="If the client has discount between 1 and 9%, let's bump it up to either 5% or 10%. If he or she has higher - leave it as it is. If no discount is available, make it 2%"
+```sql {4-5} title="If the client has a discount between 1 and 9%, let's bump it up to either 5% or 10%. If he or she has a higher one - leave it as it is. If no discount is available, make it 2%"
 SELECT
     ContactKey,
     CASE
@@ -275,7 +275,7 @@ SELECT
     END AS NewDiscount
 ```
 
-By wrapping the percent sign with the grouping sign `[]` we are telling SQL to look for exactly the percent sign. Thanks to it `'[1-4][%]'` search will look for `1%`, `2%`, `3%` or `4%` values only.
+By wrapping the `%` with the grouping sign `[]`, we are telling SQL to look for exactly the per cent sign. Thanks to it `'[1-4][%]'` search will look for `1%`, `2%`, `3%` or `4%` values only.
 
 Same works with `_` wildcard.
 
@@ -283,7 +283,7 @@ Same works with `_` wildcard.
 
 ### - Operator
 
-We can simplify more with the use of range operator `-`. Instead of writing each possible character within our group `[]` (it gets really awful when we are looking for any letter regardless of its case), we can ask for a range:
+We can simplify more with the use of range operator `-`. Instead of writing each possible character within our group `[]` (it gets awful when we are looking for any letter - lower or uppercase), we can ask for a range:
 
 <Tabs
     defaultValue='where'
@@ -330,15 +330,15 @@ FROM EcommerceUpsellDE
 </TabItem>
 </Tabs>
 
-As you can see, all we need to do, it to put range operator `-` between first and last value that we want to catch. For alphabetical searches where we want both lowercase and uppercase letters, you will need to write it like this: `LIKE '[a-zA-Z]'`.
+As you can see, all we need to do, it to put range operator `-` between the first and last value that we want to catch. For alphabetical searches where we want both lowercase and uppercase letters, you will need to write it like this: `LIKE '[a-zA-Z]'`.
 
-If you want to search for a hyphen '-' within a grouping operator that uses a range, just add it in the very beginning. `LIKE '[-0-9]` will look for either `-` or any digit.
+If you want to search for a hyphen '-' within a grouping operator that uses a range, add it in the very beginning. `LIKE '[-0-9]` will look for either `-` or any digit.
 
 :::note You Should Know
 
 You can mix and match groups, ranges and wildcards.
 
-It is great tool to create basic categorization solutions for uncontrolled data. For example, to clean up free text job title coming from web forms.
+It is an excellent tool to create essential categorization solutions for uncontrolled data. For example, to clean up free text job title coming from web forms.
 
 ```sql title="Simplified Job Title categorization"
 SELECT
@@ -355,7 +355,7 @@ FROM _Subscriber
 
 ### ^ Operator
 
-There is one more operator that is sometimes useful - the exclusion operator `^`. By adding it to the beginning of your group, you are telling the SQL to look for any character not like the ones within the group. For example, `LIKE '[^0-9]'` will look for any character that is not a digit.
+There is one more operator that is sometimes useful - the exclusion operator `^`. Add it to the beginning of your group, and SQL will not look for any of the grouped characters. For example, `LIKE '[^0-9]'` will look for any character that is not a digit.
 
 This operator is especially useful for the use in `WHERE` statement. Best example? SQL for finding with Subscriber Key not being correct Salesforce ID:
 
@@ -367,13 +367,13 @@ WHERE SubscriberKey LIKE '%[^a-zA-Z0-9]%'
     AND LEN(SubscriberKey) <> 18
 ```
 
-This simple and short query will look into each SubscriberKey and check whether in there is any character other the letter or digit (case-insensitive) or whether the length is not equal to 18. All such records have incorret value and are eligible for cleanup or investigation. Perfect for Automation with deletion SSJS script or Verification Activity to alert administrator about issues.
+This short and straightforward query will look into each SubscriberKey and check whether in there is any character other the letter or digit (case-insensitive) or whether the length is not equal to 18. All such records have incorrect value and are eligible for cleanup or investigation. Perfect for Automation with deletion SSJS script or Verification Activity to alert administrator about issues.
 
 ## NOT LIKE
 
 Finally, just as with other statements, you can add `NOT` statement before `LIKE` to search for not matching records:
 
-```sql {4} title="Same query as in the beggining of our CASE journey, but flipped"
+```sql {4} title="Same query as at the beginning of our CASE journey, but flipped"
 SELECT
     ContactKey,
     CASE
