Initial commit for SFMC SQL Functions doc page

--- a/docs/sql/sfmc-sql-basics.mdx
+++ b/docs/sql/sfmc-sql-basics.mdx
@@ -30,7 +30,7 @@ There are four most important elements that you will be using in nearly every qu
 * [`JOIN`](sfmc-sql-join): tell the query how you want to merge data from multiple sources
 * [`WHERE`](sfmc-sql-where): tell the query which part of the above data is interesting to you
 
-However, there is much to learn to unlock the full power of SQL in SFMC. Check out deep-dive docs on other SQL Statements ([`LIKE`](sfmc-sql-like)) and [SFMC System Data Views](sfmc-sql-system-data-views).
+However, there is much to learn to unlock the full power of SQL in SFMC. Check out deep-dive docs on other SQL Statements ([`LIKE`](sfmc-sql-like)), [Functions](sfmc-sql-functions) and [SFMC System Data Views](sfmc-sql-system-data-views).
 
 ## Query Studio
 
